# FunesBot

./: FunesBot.py  README.md  pyproject.toml  run.sh
src/funes/: chat.py  funes.py
