[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "funesbot"
version = "1.0.0"
authors = [
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'click',
    'python-telegram-bot',
    'python-dotenv',
    'fastapi',
    'uvicorn',
]

[project.optional-dependencies]
test = [
    "pytest",
]